--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "proxy": "http://192.168.120.101:3001",
+  "proxy": "http://localhost:3001",
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^1.0.13",
@@ -21,6 +21,7 @@
     "react": "^17.0.2",
     "react-chips": "^0.8.0",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-lottie": "^1.2.3",
     "react-notification-badge": "^1.5.1",
     "react-router-dom": "^5.2.0",
