--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "proxy": "http://localhost:3001",
+  "proxy": "http://192.168.120.101:3001",
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^1.0.13",
